Add games to the list of games.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
       <!-- <a class="navbar-brand js-scroll" href="#page-top">Joyixir OÜ</a> -->
-      <a  href="#page-top"><img src="assets/img/joyixir-logo.png" height="45px" /></a>
+      <a href="#page-top"><img src="assets/img/joyixir-logo.png" height="45px" /></a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
         <span></span>
@@ -55,7 +55,7 @@
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#service">Games</a>
+            <a class="nav-link js-scroll" href="#games">Games</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Work</a>
@@ -187,7 +187,7 @@
 
 
     <!-- ======= Games Section ======= -->
-    <section id="service" class="services-mf pt-5 route">
+    <section id="games" class="services-mf pt-5 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -206,12 +206,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <img src="assets/img/default-game-icon.png" class="ico-circle"/>
+                <img src="assets/img/game_aurora.png" class="ico-circle"/>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Game 1</h2>
+                <h2 class="s-title"><a href="https://aurorapuzzle.com/">Aurora</a></h2>
                 <p class="s-description text-center">
-                  One liner for the game.
+                  Let them dye.
                 </p>
               </div>
             </div>
@@ -219,12 +219,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <img src="assets/img/default-game-icon.png" class="ico-circle"/>
+                <img src="assets/img/game_beautysalon3d.png" class="ico-circle"/>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Game 2</h2>
+                <h2 class="s-title"><a href="https://apps.apple.com/us/app/beauty-salon-3d/id1545813093">Beauty Salon 3D</a></h2>
                 <p class="s-description text-center">
-                  One liner for the game.
+                  Make up the customers.
                 </p>
               </div>
             </div>
@@ -232,12 +232,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <img src="assets/img/default-game-icon.png" class="ico-circle"/>
+                <img src="assets/img/game_blockmaster3d.png" class="ico-circle"/>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Game 3</h2>
+                <h2 class="s-title"><a href="https://apps.apple.com/us/app/blocks-master-3d/id1547977803">Blocks Master 3D!</a></h2>
                 <p class="s-description text-center">
-                  One liner for the game.
+                  Super Fun 3D Block Puzzle
                 </p>
               </div>
             </div>
@@ -245,12 +245,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <img src="assets/img/default-game-icon.png" class="ico-circle"/>
+                <img src="assets/img/game_stackdust3d.png" class="ico-circle"/>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Game 4</h2>
+                <h2 class="s-title"><a href="https://apps.apple.com/us/app/stack-dust-3d/id1533630999">Stack Dust 3D</a></h2>
                 <p class="s-description text-center">
-                  One liner for the game.
+                  Super Addictive Stacker.
                 </p>
               </div>
             </div>
@@ -258,12 +258,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <img src="assets/img/default-game-icon.png" class="ico-circle"/>
+                <img src="assets/img/game_emojimaster.png" class="ico-circle"/>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Game 5</h2>
+                <h2 class="s-title"><a href="https://apps.apple.com/us/app/emoji-master/id1538113703">Emoji Master!</a></h2>
                 <p class="s-description text-center">
-                  One liner for the game.
+                  Connect Emojis, Make Words.
                 </p>
               </div>
             </div>
@@ -271,17 +271,18 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <img src="assets/img/default-game-icon.png" class="ico-circle"/>
+                <img src="assets/img/game_dragmaster.png" class="ico-circle"/>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Game 6</h2>
+                <h2 class="s-title"><a href="https://apps.apple.com/us/app/drag-master/id1542735244">Drag Master!</a></h2>
                 <p class="s-description text-center">
-                  One liner for the game.
+                  Fun Drag Races.
                 </p>
               </div>
             </div>
           </div>
         </div>
+        <p style="text-align:right;"><a href="https://apps.apple.com/us/developer/joyixir/id1534847102#see-all/i-phonei-pad-apps">View all launched games <i class="fa fa-chevron-right"></i></a></p>
       </div>
     </section><!-- End Services Section -->
 
