Correct the stats.

--- a/index.html
+++ b/index.html
@@ -138,46 +138,46 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-3 col-lg-3">
-            <div class="counter-box counter-box pt-4 pt-md-0">
-              <div class="counter-ico">
-                <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
-              </div>
-              <div class="counter-num">
-                <p class="counter">1,230,000</p>
-                <span class="counter-text">Hours Played</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-lg-3">
-            <div class="counter-box pt-4 pt-md-0">
-              <div class="counter-ico">
-                <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
-              </div>
-              <div class="counter-num">
-                <p class="counter">23,000</p>
-                <span class="counter-text">Daily Active Users</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
                 <span class="ico-circle"><i class="ion-ios-people"></i></span>
               </div>
               <div class="counter-num">
                 <p class="counter">14</p>
-                <span class="counter-text">Games Developed</span>
+                <span class="counter-text">PEOPLE</span>
               </div>
             </div>
           </div>
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
+                <span class="ico-circle"><i class="ion-ios-game-controller-a"></i></span>
               </div>
               <div class="counter-num">
-                <p class="counter">2</p>
-                <span class="counter-text">AWARDS WON</span>
+                <p class="counter">18</p>
+                <span class="counter-text">Games Developed</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3 col-lg-3">
+            <div class="counter-box counter-box pt-4 pt-md-0">
+              <div class="counter-ico">
+                <span class="ico-circle"><i class="ion-ios-time-outline"></i></span>
+              </div>
+              <div class="counter-num">
+                <p class="counter">35.45</p>
+                <span class="counter-text">Playtime (min)</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3 col-lg-3">
+            <div class="counter-box pt-4 pt-md-0">
+              <div class="counter-ico">
+                <span class="ico-circle"><i class="ion-ios-body-outline"></i></span>
+              </div>
+              <div class="counter-num">
+                <p class="counter">19,560</p>
+                <span class="counter-text">Daily Active Users</span>
               </div>
             </div>
           </div>
