Correct the title of stats.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               </div>
               <div class="counter-num">
                 <p class="counter">14</p>
-                <span class="counter-text">PEOPLE</span>
+                <span class="counter-text">People</span>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
               </div>
               <div class="counter-num">
                 <p class="counter">19,560</p>
-                <span class="counter-text">Daily Active Users</span>
+                <span class="counter-text">Daily Active Users (DAU)</span>
               </div>
             </div>
           </div>
