--- a/privacy/beautysalon.html
+++ b/privacy/beautysalon.html
@@ -33,60 +33,11 @@
   ======================================================== -->
 </head>
 
-<body id="page-top" onload="renderHello()">
-
-  <!-- ======= Header/ Navbar ======= -->
-  <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
-    <div class="container">
-      <a href="#page-top"><img src="../assets/img/joyixir-logo.png" height="45px" /></a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll active" href="joyixir.com">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="joyixir.com/index.html#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="joyixir.com/index.html#games">Games</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="joyixir.com/index.html#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<body id="page-top" onload="renderPolicyDetails()">
 
   <div id="target">Loading...</div>
   <script id="template" type="x-tmpl-mustache">
   </script>
-  <!-- ======= Footer ======= -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
-            <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-            -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer><!-- End  Footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <div id="preloader"></div>
@@ -107,11 +58,14 @@
 
   <script src="https://unpkg.com/mustache@latest"></script>
   <script>
-    function renderHello() {
-      fetch('policy.mustache')
+    function renderPolicyDetails() {
+      fetch('templates/policy_voodoo.mustache')
         .then((response) => response.text())
         .then((template) => {
-          var rendered = Mustache.render(template, { name: 'Beauty Salon 3D' });
+          var rendered = Mustache.render(template, {
+            name: 'Beauty Salon 3D',
+            homepage_url: 'https://joyixir.github.io/homepage'
+          });
           document.getElementById('target').innerHTML = rendered;
         });
     }
