Add the adsense code in the header.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  
+  <! -- Adsense code -->
+  <script data-ad-client="ca-pub-3313515664896857" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!-- =======================================================
   * Template Name: DevFolio - v2.4.0
