--- a/en/contact-us/index.html
+++ b/en/contact-us/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://joyixir.com/#games" />
+<meta http-equiv="refresh" content="0; url=https://joyixir.com/#contact" />
