Update the 404 page.

--- a/404.html
+++ b/404.html
@@ -1,6 +1,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link href="assets/img/favicon.png" rel="icon">
+
     <title>Joyixir :: Page not found! - 404 Error</title>
     <style>
       @import url(https://fonts.googleapis.com/css?family=Ubuntu);
@@ -334,6 +336,7 @@
     </div>
 
     <script src="assets/vendor/jquery/jquery.min.js"></script>
+
     <script>
       //based on https://dribbble.com/shots/3913847-404-page
 
@@ -352,7 +355,7 @@
 
         $('.box__ghost-eyes').css({ 'transform': 'translate('+ xAxis +'%,-'+ yAxis +'%)' });
 
-        console.log('X: ' + xAxis);
+        // console.log('X: ' + xAxis);
 
       });
     </script>
