Add a comment for todo in the file.

--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
 
     <title>Joyixir :: Page not found! - 404 Error</title>
     <style>
+      <!-- TODO: Mobile Device Compatible CSS -->
       @import url(https://fonts.googleapis.com/css?family=Ubuntu);
       html, body {
         background: #212529;
