--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-  
+
   <! -- Adsense code -->
   <script data-ad-client="ca-pub-3313515664896857" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
@@ -154,7 +154,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="ion-ios-game-controller-a"></i></span>
+                <span class="ico-circle"><i class="ion-ios-game-controller-b"></i></span>
               </div>
               <div class="counter-num">
                 <p class="counter">18</p>
@@ -165,7 +165,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="ion-ios-time-outline"></i></span>
+                <span class="ico-circle"><i class="ion-ios-time"></i></span>
               </div>
               <div class="counter-num">
                 <p class="counter">35.45</p>
