Change the address of the jquery to be loadable everywhere.

--- a/404.html
+++ b/404.html
@@ -336,7 +336,7 @@
       </div>
     </div>
 
-    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="https://joyixir.com/assets/vendor/jquery/jquery.min.js"></script>
 
     <script>
       //based on https://dribbble.com/shots/3913847-404-page
