--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
                       for years.
                     </p>
                     <p class="lead">
-                      Other than a video game company, we are a startup company
+                      Other than being a video game company, we are a startup company
                       with entrepeneurial mindset and thirst for innovation from
-                      our products to our company culture. Beside developing games,
-                      we are focusing on innovative game design principles and
-                      Games leveraging machine learning and data-intensive approaches
-                      for personalization and user-engagement.
+                      our products to our company culture. While developing games,
+                      we think about innovative game design principles that 
+                      leverages machine learning and data-intensive approaches
+                      to forge personalized and engaging games with mindfulness.
                     </p>
                   </div>
                 </div>
