Update the text a bit for the investors.

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                         Are you a talent looking for an opportunity?
                         Are you a publisher looking for a professional team
                         producing high quality games?
-                        Are you an investor looking for a place to invest?
+                        Are you an investor seeking a high-return investment option?
                         or perhaps you have a business offer or an idea you want
                         to share with us, anyhow, we are open to talk with you :)
                       </p>
