Update privacy index page with new games

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -32,6 +32,9 @@
     <li><a href="templates">templates</a></li>
     <li><a href="willywild.html">willywild.html</a></li>
     <li><a href="worldofwords.html">worldofwords.html</a></li>
+    <li><a href="quenchquestfirefighter.html">quenchquestfirefighter.html</a></li>
+    <li><a href="swingrunner.html">swingrunner.html</a></li>
+    <li><a href="doctorchemlaboratory.html">doctorchemlaboratory.html</a></li>
 </p>
 </body>
 </html>
