Add Moving Crew policy page

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -35,6 +35,7 @@
     <li><a href="quenchquestfirefighter.html">quenchquestfirefighter.html</a></li>
     <li><a href="swingrunner.html">swingrunner.html</a></li>
     <li><a href="doctorchemlaboratory.html">doctorchemlaboratory.html</a></li>
+    <li><a href="movingcrew.html">movingcrew.html</a></li>
 </p>
 </body>
 </html>
