Add moving inc url to privacy index

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -31,6 +31,7 @@
     <li><a href="swingrunner.html">swingrunner.html</a></li>
     <li><a href="doctorchemlaboratory.html">doctorchemlaboratory.html</a></li>
     <li><a href="movingcrew.html">movingcrew.html</a></li>
+    <li><a href="movinginc.html">movinginc.html</a></li>
 </p>
 </body>
 </html>
