Add bakery chef privacy policy

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -32,6 +32,8 @@
     <li><a href="doctorchemlaboratory.html">doctorchemlaboratory.html</a></li>
     <li><a href="movingcrew.html">movingcrew.html</a></li>
     <li><a href="movinginc.html">movinginc.html</a></li>
+    <li><a href="hospitallercurethepatients.html">hospitallercurethepatients.html</a></li>
+    <li><a href="bakerychef3d.html">bakerychef3d.html</a></li>
 </p>
 </body>
 </html>
