--- a/privacy/index.html
+++ b/privacy/index.html
@@ -35,6 +35,7 @@
     <li><a href="movinginc.html">movinginc.html</a></li>
     <li><a href="hospitallercurethepatients.html">hospitallercurethepatients.html</a></li>
     <li><a href="bakerychef3d.html">bakerychef3d.html</a></li>
+    <li><a href="bakeryinc.html">bakeryinc.html</a></li>
 </p>
 </body>
 </html>
