--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
                               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-			      <input type="text" name="_gotcha" style="display:none" />
+			      <input type="text" name="_gotcha" style="display:none" /> <!-- honeypot to bust the spammers! -->
                               <div class="validate"></div>
                             </div>
                           </div>
@@ -348,7 +348,7 @@
                             <div class="error-message"></div>
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
-			  <div class="g-recaptcha" data-sitekey="6LfpCc0aAAAAAJsPV6sm-Yn_izxfZFW58jh5ipoh"></div>
+			  <!-- <div class="g-recaptcha" data-sitekey="6LfpCc0aAAAAAJsPV6sm-Yn_izxfZFW58jh5ipoh"></div> --> 
                           <div class="col-md-12 text-center">
                             <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
                           </div>
