Update company's phone number.

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                       </p>
                       <ul class="list-ico">
                         <li><span class="ion-ios-location"></span> Joyixir OÜ, Tartu, Estonia</li>
-                        <li><span class="ion-ios-telephone"></span> (+372) 5670 8818</li>
+			<li><span class="ion-ios-telephone"></span> (+372)-534-3666-1</li>
                         <li><span class="ion-email"></span> info[at]joyixir[dot]com</li>
                       </ul>
                     </div>
