--- a/privacy/index.html
+++ b/privacy/index.html
@@ -36,11 +36,11 @@
     <li><a href="hospitallercurethepatients.html">hospitallercurethepatients.html</a></li>
     <li><a href="bakerychef3d.html">bakerychef3d.html</a></li>
     <li><a href="bakeryinc.html">bakeryinc.html</a></li>
-    <li><a href="athletetransformers.html">bakeryinc.html</a></li>
-    <li><a href="celebguard.html">bakeryinc.html</a></li>
-    <li><a href="tetrisrun3dblockpopping.html">bakeryinc.html</a></li>
-    <li><a href="skatergirlwaitress.html">bakeryinc.html</a></li>
-    <li><a href="psychiatricclinic.html">bakeryinc.html</a></li>
+    <li><a href="athletetransformers.html">athletetransformers.html</a></li>
+    <li><a href="celebguard.html">celebguard.html</a></li>
+    <li><a href="tetrisrun3dblockpopping.html">tetrisrun3dblockpopping.html</a></li>
+    <li><a href="skatergirlwaitress.html">skatergirlwaitress.html</a></li>
+    <li><a href="psychiatricclinic.html">psychiatricclinic.html</a></li>
 </p>
 </body>
 </html>
