--- a/privacy/index.html
+++ b/privacy/index.html
@@ -41,6 +41,8 @@
     <li><a href="tetrisrun3dblockpopping.html">tetrisrun3dblockpopping.html</a></li>
     <li><a href="skatergirlwaitress.html">skatergirlwaitress.html</a></li>
     <li><a href="psychiatricclinic.html">psychiatricclinic.html</a></li>
+    <li><a href="satistype.html">satistype.html</a></li>
+    <li><a href="batguy.html">batguy.html</a></li>
 </p>
 </body>
 </html>
