Add aqua park puzzle

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -43,6 +43,9 @@
     <li><a href="psychiatricclinic.html">psychiatricclinic.html</a></li>
     <li><a href="satistype.html">satistype.html</a></li>
     <li><a href="batguy.html">batguy.html</a></li>
+    <li><a href="kongcannon.html">kongcannon.html</a></li>
+    <li><a href="kindergarten3d.html">kindergarten3d.html</a></li>
+    <li><a href="aquaparkpuzzle.html">aquaparkpuzzle.html</a></li>
 </p>
 </body>
 </html>
