Add Save Them All game

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -46,6 +46,9 @@
     <li><a href="kongcannon.html">kongcannon.html</a></li>
     <li><a href="kindergarten3d.html">kindergarten3d.html</a></li>
     <li><a href="aquaparkpuzzle.html">aquaparkpuzzle.html</a></li>
+    <li><a href="treedecorate.html">treedecorate.html</a></li>
+    <li><a href="artofclay.html">artofclay.html</a></li>
+    <li><a href="savethemall.html">savethemall.html</a></li>
 </p>
 </body>
 </html>
