Add Flippy Fork

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -49,6 +49,8 @@
     <li><a href="treedecorate.html">treedecorate.html</a></li>
     <li><a href="artofclay.html">artofclay.html</a></li>
     <li><a href="savethemall.html">savethemall.html</a></li>
+    <li><a href="soapmaster3d.html">soapmaster3d.html</a></li>
+    <li><a href="flippyfork.html">flippyfork.html</a></li>
 </p>
 </body>
 </html>
