Fix small typos in team description

--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
                     </p>
                     <p class="lead">
                       We are a small team but with big ambitions. Recently, we
-                      founded our head quarter in Tartu, Estonia. Currently, our
+                      founded our headquarter in Tartu, Estonia. Currently, our
                       focus is on hyper-casual games working with the biggest
-                      publishers in the industry. Our long term plan is to focus
+                      publishers in the industry. Our long-term plan is to focus
                       on casual and mid-core games which keep people entertained
                       for years.
                     </p>
                     <p class="lead">
                       Other than being a video game company, we are a startup company
-                      with entrepeneurial mindset and thirst for innovation from
+                      with entrepreneurial mindset and thirst for innovation from
                       our products to our company culture. While developing games,
                       we think about innovative game design principles that 
                       leverages machine learning and data-intensive approaches
