--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                           </div>
                           <div class="col-md-12">
                             <div class="form-group">
-                              <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                              <textarea class="form-control" name="message" rows="5" data-msg="Please write something for us" placeholder="Message" required></textarea>
                               <div class="validate"></div>
                             </div>
                           </div>
