Add Bucket Race privacy page

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -51,6 +51,11 @@
     <li><a href="savethemall.html">savethemall.html</a></li>
     <li><a href="soapmaster3d.html">soapmaster3d.html</a></li>
     <li><a href="flippyfork.html">flippyfork.html</a></li>
+    <li><a href="hangsome.html">hangsome.html</a></li>
+    <li><a href="jewelrystore3d.html">jewelrystore3d.html</a></li>
+    <li><a href="petsalon3d.html">petsalon3d.html</a></li>
+    <li><a href="deliveryrun3d.html">deliveryrun3d.html</a></li>
+    <li><a href="petsbucketrace.html">bucketrace.html</a></li>
 </p>
 </body>
 </html>
