Add Blocks vs. Balance privacy page

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -56,6 +56,13 @@
     <li><a href="petsalon3d.html">petsalon3d.html</a></li>
     <li><a href="deliveryrun3d.html">deliveryrun3d.html</a></li>
     <li><a href="petsbucketrace.html">bucketrace.html</a></li>
+    <li><a href="fireitup.html">fireitup.html</a></li>
+    <li><a href="diyipear.html">diyipear.html</a></li>
+    <li><a href="candymerge.html">candymerge.html</a></li>
+    <li><a href="rescue’emall.html">rescue’emall.html</a></li>
+    <li><a href="colorclash.html">colorclash.html</a></li>
+    <li><a href="kayakrun.html">kayakrun.html</a></li>
+    <li><a href="blocksvsbalance.html">blocksvsbalance.html</a></li>
 </p>
 </body>
 </html>
