--- a/privacy/icesling.html
+++ b/privacy/icesling.html
@@ -30,7 +30,7 @@
   <script src="https://unpkg.com/mustache@latest"></script>
   <script>
     function renderPolicyDetails() {
-      fetch('templates/policy_voodoo.mustache')
+      fetch('templates/policy_supersonic.mustache')
         .then((response) => response.text())
         .then((template) => {
           var rendered = Mustache.render(template, {
